--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,39 @@
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
+*~
 *.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
+*.app
+*.cmd
+*.d
 *.dll
+*.dSYM/
+*.dylib
+*.elf
+*.exe
+*.exp
+*.gch
+*.hex
+*.i*86
+*.idb
+*.ilk
+*.ko
+*.la
+*.lib
+*.lo
+*.map
+*.mod*
+*.o
+*.obj
+*.out
+*.pch
+*.pdb
 *.so
 *.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
 *.su
-*.idb
-*.pdb
+*.x86_64
 
-# Kernel Module Compile Results
-*.mod*
-*.cmd
+.idea/
 .tmp_versions/
+
+dkms.conf
 modules.order
 Module.symvers
 Mkfile.old
-dkms.conf
